Archive2/3a/cabbc3d6817285/output
main.cpp: In function 'int main(int, char**)':
main.cpp:7:32: error: an array reference cannot appear in a constant-expression
         secondVal = 1 & "WOW"[0]
                                ^
